tests/snapshots/integration_test__simple_pipeline.snap
---
source: tests/integration_test.rs
expression: sv
---
// domain SysDomain
//   freq_mhz: 100

module SimplePipe #(
  parameter int XLEN = 32
) (
  input logic clk,
  input logic rst,
  input logic [XLEN-1:0] data_in,
  output logic [XLEN-1:0] data_out
);

  // ── Stage valid registers ──
  logic fetch_valid_r;
  logic writeback_valid_r;
  
  // ── Stage data registers ──
  logic [XLEN-1:0] fetch_captured;
  logic [XLEN-1:0] writeback_result;
  
  // ── Pipeline control register updates ──
  always_ff @(posedge clk) begin
    if (rst) begin
      fetch_valid_r <= 1'b0;
      writeback_valid_r <= 1'b0;
    end else begin
      fetch_valid_r <= 1'b1;
      writeback_valid_r <= fetch_valid_r;
    end
  end
  
  // ── Synchronous/reset-free stage data updates ──
  always_ff @(posedge clk) begin
    fetch_captured <= data_in;
    writeback_result <= fetch_captured;
    if (rst) begin
      fetch_captured <= 0;
      writeback_result <= 0;
    end
  end
  
  // ── Combinational outputs ──
  assign data_out = writeback_result;

endmodule
