tests/snapshots/integration_test__template_basic.snap
---
source: tests/integration_test.rs
expression: sv
---
// domain SysDomain
//   freq_mhz: 100

module MyArbiter #(
  parameter int NUM_REQ = 4
) (
  input logic clk,
  input logic rst,
  input logic [3:0] req_mask,
  output logic grant_valid,
  output logic [3:0] grant_out
);

  function automatic logic [3:0] FixedGrant(input logic [3:0] req_mask);
    FixedGrant = req_mask & 4'(~req_mask + 1);
  endfunction
  
  logic [3:0] grant;
  assign grant = FixedGrant(req_mask);
  assign grant_valid = grant != 0;
  assign grant_out = grant;

endmodule
