tests/snapshots/integration_test__todo_placeholder.snap
---
source: tests/integration_test.rs
expression: sv
---
// domain SysDomain
//   freq_mhz: 100

module Placeholder (
  input logic clk,
  input logic rst,
  output logic [7:0] out_val
);

  assign out_val = '0 /* TODO: todo! placeholder */;

endmodule
